# game-framework

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
code/engine/: CMakeLists.txt
code/engine/graphics/: CMakeLists.txt  README.md
code/engine/graphics/index_buffer/: CMakeLists.txt  main.cpp
code/engine/graphics/opengl/: CMakeLists.txt  main.cpp
code/engine/graphics/shaders/: CMakeLists.txt  main.cpp
code/engine/graphics/transformations/: CMakeLists.txt  main.cpp
code/engine/graphics/uniform_buffer/: CMakeLists.txt  main.cpp
code/engine/graphics/vertex_buffer/: CMakeLists.txt  main.cpp
code/engine/lighting/: CMakeLists.txt
code/engine/lighting/diffuse_lighting/: CMakeLists.txt  main.cpp
code/engine/platform/: CMakeLists.txt  README.md
code/engine/platform/input/: CMakeLists.txt  main.cpp
code/engine/platform/window/: CMakeLists.txt  main.cpp
libraries/: CMakeLists.txt
